--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<script src="x-frame-bypass.js" type="module"></script>
 </head>
 <body>
-	<iframe is="x-frame-bypass" src="https://https://now.gg/apps/roblox-corporation/5349/roblox.html/"></iframe>
+	<iframe is="x-frame-bypass" src="https://www.gamenora.com/"></iframe>
 	
 </body>
 </html>
